# adk-samples

./: README.md
python/agents/: README.md
python/agents/RAG/: pyproject.toml
python/agents/agent_collaboration-flight_itinerary/: README.md  agent.py  pyproject.toml  tools.py
python/agents/ai-security-agent/: pyproject.toml
python/agents/airflow_version_upgrade_agent/: Makefile  README.md  pyproject.toml
python/agents/bidi-demo/: README.md  pyproject.toml
python/agents/blog-writer/: pyproject.toml
python/agents/brand-aligner/: README.md
python/agents/camel/: pyproject.toml
python/agents/customer-service/: README.md  pyproject.toml
python/agents/data-engineering/: README.md
python/agents/data-science/: README.md  pyproject.toml
python/agents/dynamic_workflow-code_reviewer/: README.md  agent.py  pyproject.toml  tools.py
python/agents/invoice_processing/: README.md  pyproject.toml
python/agents/invoice_processing/eval/: compare_postprocessing.py  eval.py
python/agents/invoice_processing/invoice_processing/: agent.py
python/agents/invoice_processing/invoice_processing/core/: case_loader.py  impact_assessor.py  prompts.py  rule_discoverer.py  rule_writer.py  safe_rule_orchestrator.py  session_logger.py
python/agents/invoice_processing/invoice_processing/data/: comparison_results.json
python/agents/invoice_processing/invoice_processing/data/agent_output/case_001/: 01_classification.json  02_extraction.json  03_phase1_validation.json  04_phase2_validation.json  05_phase3_validation.json  07_transformation.json  08_decision.json  09_audit_log.json  Postprocessing_Data.json
python/agents/invoice_processing/invoice_processing/data/agent_output/case_003/: 01_classification.json  02_extraction.json  03_phase1_validation.json  04_phase2_validation.json  05_phase3_validation.json  06_phase4_validation.json  07_transformation.json  08_decision.json  09_audit_log.json  Postprocessing_Data.json
python/agents/invoice_processing/invoice_processing/data/agent_output/case_004/: 01_classification.json  02_extraction.json  03_phase1_validation.json  07_transformation.json  08_decision.json  09_audit_log.json  Postprocessing_Data.json
python/agents/invoice_processing/invoice_processing/exemplary_data/: test_cases_summary.json
python/agents/invoice_processing/invoice_processing/exemplary_data/case_003/: Postprocessing_Data.json  case_metadata.json
python/agents/invoice_processing/invoice_processing/exemplary_data/case_004/: Postprocessing_Data.json  case_metadata.json
python/agents/invoice_processing/invoice_processing/shared_libraries/: alf_engine.py  master_data_loader.py
python/agents/invoice_processing/invoice_processing/shared_libraries/acting/: general_invoice_agent.py
python/agents/invoice_processing/invoice_processing/shared_libraries/investigation/: investigate_agent_reconst.py
python/agents/invoice_processing/invoice_processing/tools/: tools.py
python/agents/invoice_processing/tests/: conftest.py  test_action_executor.py  test_alf_engine.py  test_condition_evaluator.py  test_impact_assessor.py  test_rule_writer.py
python/agents/workflow-HITL_concierge/: agent.py  pyproject.toml
python/agents/workflows-sequential/: agent.py  pyproject.toml
(+77 files in other folders)
