[project]
name = "invoice-processing"
version = "1.0.0"
description = "Invoice Processing -- Unified inference and learning agent for invoice processing"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["adk", "invoice", "document-processing", "agent", "gemini", "vertex-ai"]
readme = "README.md"

authors = [
    { name = "Pouya Ghiasnezhad Omran", email = "pgomran@google.com" },
    { name = "Tanya Dixit", email = "dixittanya@google.com" },
]

[project.urls]
Repository = "https://github.com/GoogleCloudPlatform/adk-samples"

dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-aiplatform>=1.38.0",
    "vertexai>=1.38.0",
    "pydantic>=2.8.0",
    "pdfplumber>=0.10.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
